--- a/ec2.yaml
+++ b/ec2.yaml
@@ -6,5 +6,5 @@ Resources:
     Properties:
        ImageId: ami-0c101f26f147fa7fd
        InstanceType: t2.micro
-       KeyName: priyalinuxkey1
-       AvailabilityZone: us-east-1a
+       KeyName: Newone
+       AvailabilityZone: us-east-1
